public/stylesheets/default.css
body {
	font-family: "Lucida Grande",Arial,Helvetica,sans serif;
	font-size: 14px;
}

a,
a:visited,
a:hover {
	color: #2c94e4;
	outline: none;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

ul,li {
	list-style-type: none;
}

abbr {
	text-decoration: none;
	border-bottom: none;
}

div.page {
	width: 920px;
	margin: 2em auto;
}

/* Title header */

.header {
	background-color: #111;
	height: 130px;
}

.header .inner {
	width: 920px;
	margin: 0 auto;
	padding-top: 20px;
}

.header .inner a {
	font-size: 40px;
	margin: 0 10px;
	display: block;
}

.header a:hover {
	text-decoration: none;
}

.header .subtitle {
	display: block;
	color: #87ADCD;
	margin: 0 10px;
	font-size: 20px;
}

/* About footer */

.about a.license {
	display: block;
	float: left;
	margin: 0.2em 1em 1em 0;
}

.about {
	/*background-color: #3C5978;*/
	background-color: #333;
	color: #fff;
	height: 200px;
	margin: 8em 0 0 0;
	width: 100%;
}

.about .inner {
	width: 920px;
	margin: 2em auto;
	padding-top: 2em;
}

.about p,
.about h2 {
  margin-bottom: 0.8em;	
}

.pagination {
	margin: 2em 1em;
	display: block;
	clear: both;
	font-size: 18px;
}

.pagination .prev_page,
.pagination .next_page {
	display: none;
}

.details {
	font-size: 11px;
	color: #999;
	text-align: left;
}

/* Articles */

.articles .inner {
	width: 920px;
	padding: 0 10px;
	margin: 2em auto;	
}

.latest_article {
	float: left;
	width: 43%;
	padding: 1em 1.5em 0 10px;
}

.latest_article p {
	margin: 0.4em 0;
}

.previous_articles {
	float: left;
	width: 48%;
	padding: 1em 10px 0 2em;
	border-left: 1px dashed #999;
}

.previous_articles h3 {
	margin-bottom: 0.8em;
}

.previous_articles a.article {
	font-size: 16px;
}

.previous_articles .details {
	margin-top: 4px;
}

div.articles li {
	margin: 0.4em 0;
}

div.articles a.article {
	color: #e97f2a;
}

div.articles a.more {
	color: #2c94e4;
}
div.articles a.read.more {
	display: block;
	margin-top: 1em;
}

div.articles a.more.articles {
	display: block;
	margin: 1em 0;
}

div.articles a.feedburner {
	display: block;
	float: right;
	margin-top: -0.2em;
}

/* Media */

.media.summary {
	width: 100%;
	background-color: #ddd;
}

.media.summary h2 {
	text-align: left;
	margin-left: 10px;
}

.media .caption_biggest {
	font-size: 20px !important;
}

.media.summary .inner {
	width: 920px;
	margin: 0 auto 2em auto;
	padding-top: 1em;
	text-align: center;
	height: 300px;
}

.media li {
	display: block;
	float: left;
	width: 207px;
	height: 220px;
	border: 1px solid #ccc;
	margin: 10px;
}

.media li.body {
	float: left;
	margin: 1em;
}

.media .slide,
.media .photo, 
.media .video {
	background-color: #111;
	color: #eee;
  border: none;
}

.media .slide a.caption,
.media .video a.caption,
.media .photo a.caption {
	color: #eee;
	text-decoration: none;
}

.media .slide span,
.media .photo span,
.media .video span {
  font-size: 12px;
  display: block;
  height: 30px;
	text-align: left;
	margin: 10px;
}

.media .slide img,
.media .photo img,
.media .video embed {
  width: 207px;
  height: 180px;
}

.media .details {
	text-align: center;
	margin-top: 0.4em;
}

.media a.more {
	display: block;
	float: right;
	margin: 5px 20px 0 0;
}

.media.all h1 {
	margin: 0 10px;
}

/* Stream panels */

.trips h3,
.tagcloud h3,
.profiles h3,
.stats h3 {
	margin-bottom: 0.8em;
}

.tagcloud {
	float: left;
	word-spacing: 5px;left;
	width: 300px;
	padding: 1em;
}

.trips,
.profiles,
.stats {
	float: left;
	width: 300px;
	padding: 1em;
}

.profiles li {
  margin-bottom: 0.8em;	
}

.trips li {
	margin-bottom: 0.6em;
}

.trips li abbr.travel_ends_at,
.trips li .summary,
.trips li .description {
	visibility: hidden;
	display: none;
}

.trips li abbr.travel_starts_at {
	display: block;
	font-size: 12px;
}

.profiles .more {
}

/* Stream */

.stream_and_context a.more {
	display: block;
	font-size: 12px;
}

.stream_and_context {
	width: 920px;
	margin: 2em auto;
	padding: 0 10px;
}

.stream {
	width: 500;
	float: left;
	margin: 0 2em 0 10px;
	min-height: 600px;
}

.stream li {
	border-bottom: 1px dashed #999;
	padding: 15px 5px;
}

/* Custom stream styles */

.stream li.bookmark { }
.stream li.photo { }
.stream li.video { }
.stream li.message { }
.stream li.article { }
.stream li.slide { }
.stream li.software { }
.stream li.music { }

.stream li:hover {
	background-color: #F7F7F7;
}

.stream .icon img {
	width: 48px;
}

.stream .icon {
	float: left;
	height: 48px;
}

.stream div.body {
	margin-left: 60px;
}

.stream .details {
	margin-left: 60px;
	margin-top: 6px;
}

.stream ul {
	margin-bottom: 4em;
}

/* Archive */

.archive ul {
  margin: 1em 0;
}

.archive li.month {
 font-size: 20px;	
}

.archive li {
	margin: 0.6em 0;	
}

/* Show the full view */

.read .published {
	float: right;
	margin: 0 2em 0em 0;
	font-style: italic;
}

.show .entry-content {
	clear: both;
}

.show {
	margin: 1em 0 4em 0;
	padding: 0 1em;
}

.show h1 {
	color: #e97f2a;
}

/* Custom page styles */

.show .bookmark { }
.show .photo { }
.show .video { }
.show .message { }
.show .article { }
.show .slide { }
.show .software { }
.show .music { }

.show .video embed {
  width: 500px;
  height: 405px;
  margin: 2em 0;
}

.show .photo img {
  margin: 2em 0;
  max-width: 700px;
}

.show .tags {
	margin: 2em 0;
}

.show p,
.show table,
.show img {
	margin-bottom: 0.8em;
}

.show div.player {
	margin-top: 2em;
}

div.show.message {
	margin: 1em;
	padding: 1em 0 0;
}

.show .message span {
	display: block;
	font-size: 22px;
	margin: 3em 0;
}

.show h1,
.show h2,
.show h3 {
	margin: 0.8em 0;
}

.show ul {
	margin: 1em 0;
}

.show li {
	color: #333;
	margin: 0.4em 0 0.6em 2em;
}

.tags label {
	display: block;
	float: left;
	background: url('/images/icons/24-tag-hot.png') no-repeat left center;
	text-indent: -3000;
	width: 30px;
}

.related,
.tags {
	padding: 0 1em;
	margin: 1em 0;
}

.related {
	margin-bottom: 2em;
}

.related ul {
}

.related li {
	margin: 0.4em 0;
}

.related_and_tags {
	background-color: #eee;
	margin-right: 1em;
	margin-bottom: 2em;
	padding: 1em 0;
}

.discussion {
	padding: 0 1em;
}

.related h3,
.discussion h3 {
	font-size: 20px;
}

.discussion .dsq-auth-header {
	display: none;
}

a.more {
	color: #2c94e4;
}

.share {
	padding: 0 1em;
}

.share iframe {
	width: 100px !important;
}

.share a.tweet_this {
	background: url('/images/twitter.png') no-repeat left center;
	display: block;
	position: absolute;
	text-indent: -3000;
	width: 20px;
	height: 20px;
}

/* Statistics */

.statistics div.services.summary {
	margin: 2em 2em 0 0;
	float: left;
}

.statistics div.hourly.activity {
	margin-top: 2em;
}

